--- a/trunk/view/skin1/css/style.css
+++ b/trunk/view/skin1/css/style.css
@@ -30,7 +30,7 @@ body {
 	color: #FFF;
 	font: normal 75% Arial, Tahoma, Helvetica, sans-serif;
 	line-height: 1.5;
-	overflow:hidden;
+	
 }
 
 
@@ -836,7 +836,7 @@ ul#menu li ul li div:hover {
 }
 #ben-info
 {
-	margin-top:30px;
+	
 }
 #ben-info .ben-item
 {
@@ -845,15 +845,15 @@ ul#menu li ul li div:hover {
 
 #ben-info-left
 {
-	width:765px;
+	width:100%;
 }
 #ben-info-right
 {
-	width:262px;
+	width:100%;
 }
 #ben-info-movie
 {
-	width:765px;
+	width:100%;
 	height:554px;	
 }
 .ben-tabs
@@ -902,7 +902,7 @@ ul#menu li ul li div:hover {
 }
 #moviecontent
 {
-	width:515px;
+	width:790px;
 	height:403px;
 	overflow:auto;
 }
