--- a/view/skin1/css/style.css
+++ b/view/skin1/css/style.css
@@ -30,7 +30,7 @@ body {
 	color: #FFF;
 	font: normal 75% Arial, Tahoma, Helvetica, sans-serif;
 	line-height: 1.5;
-	
+	overflow:hidden;
 }
 
 
@@ -854,7 +854,7 @@ ul#menu li ul li div:hover {
 #ben-info-movie
 {
 	width:100%;
-	height:554px;	
+	height:686px;	
 }
 .ben-tabs
 {
@@ -886,7 +886,7 @@ ul#menu li ul li div:hover {
 }
 .ben-tabs-show
 {
-	height:445px;
+	height:560px;
 	overflow:auto;
 	padding:15px 0 15px 15px;	
 	
