--- a/view/skin1/css/style.css
+++ b/view/skin1/css/style.css
@@ -30,7 +30,7 @@ body {
 	color: #FFF;
 	font: normal 75% Arial, Tahoma, Helvetica, sans-serif;
 	line-height: 1.5;
-	overflow:hidden;
+	/*overflow:hidden;*/
 }
 
 
