--- a/view/skin1/css/style.css
+++ b/view/skin1/css/style.css
@@ -75,7 +75,7 @@ a.ben-other:hover {}
 
 
 /* Paragraph */
-p {margin-bottom: 0.5em;}
+p {}
 
 object { vertical-align:top; outline:none;border:0}
 
