--- a/view/skin1/css/style.css
+++ b/view/skin1/css/style.css
@@ -835,8 +835,8 @@ ul#menu li ul li div:hover {
 {
 	color:#FFF;
 	font-weight:bold;
-	
-	background:#f58220;
+	height:5px;
+	background:red;
 }
 #ben-info
 {
@@ -871,7 +871,7 @@ ul#menu li ul li div:hover {
 {
 	text-align:center;
 	padding:6px 0;
-	border-right:thin solid #393839;
+	border-right:15px solid #6d6e70;
 }
 .ben-tabs td:hover
 {
@@ -895,7 +895,7 @@ ul#menu li ul li div:hover {
 {
 	height:481px;
 	overflow:hidden;
-	padding:15px;	
+	padding-top:5px;	
 	
 }
 
@@ -918,6 +918,19 @@ ul#menu li ul li div:hover {
 #nowshowing
 {
 	background:#ed1c24;	
+	padding: 5px;
+    margin: 5px 0;
+	width:40%;
+}
+.ben-header-icon
+{
+	position:absolute;
+	height:45px;
+	margin-top:-7px;
+}
+#nowshowing h3
+{
+	margin-left:42px;	
 }
 #comingsoon
 {
