--- a/view/skin1/css/style.css
+++ b/view/skin1/css/style.css
@@ -9,8 +9,8 @@ a img {border: none;}
    GENERAL 
 ------------------------------------------------------------------- */
 html {
-	height: 100%;
-	padding-bottom: 1px; /* force scrollbars */
+	-ms-content-zooming: none; /* Disables zooming */
+    touch-action: none;   /* Disable any special actions on tap/touch */
 }
 
 body {
@@ -18,6 +18,7 @@ body {
 	color: #FFF;
 	font: normal 75% Arial, Tahoma, Helvetica, sans-serif;
 	line-height: 1.5;
+	
 	/*overflow:hidden;*/
 }
 .ben-table-run td
