--- a/view/skin1/css/style.css
+++ b/view/skin1/css/style.css
@@ -19,7 +19,7 @@ body {
 	font: normal 75% Arial, Tahoma, Helvetica, sans-serif;
 	line-height: 1.5;
 	
-	overflow:hidden;
+	/*overflow:hidden;*/
 }
 .ben-table-run td
 {
@@ -831,7 +831,7 @@ ul#menu li ul li div:hover {
 }
 #ben-info .ben-item
 {
-	
+	height:420px;
 }
 #ben-info td
 {
